objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Most_relevant_part_of_assessment_PL__c</fullName>
        <inlineHelpText>Most relevant part of assessment - PL</inlineHelpText>
        <label>Most relevant part of assessment - PL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision making</fullName>
                </value>
                <value>
                    <fullName>Group Facilitating - Young People Present</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Management skills</fullName>
                </value>
                <value>
                    <fullName>Managing emotions</fullName>
                </value>
                <value>
                    <fullName>Mentor small group - Young People Present</fullName>
                </value>
                <value>
                    <fullName>Problem solving ability</fullName>
                </value>
                <value>
                    <fullName>Resilience</fullName>
                </value>
                <value>
                    <fullName>Respect for others</fullName>
                </value>
                <value>
                    <fullName>Written exercise: Best and worst outcomes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_PRAC__c</fullName>
        <inlineHelpText>Most relevant part of assessment - PRAC</inlineHelpText>
        <label>Most relevant part of assessment - PRAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Practitioner facilitation</fullName>
                </value>
                <value>
                    <fullName>Purpose of NCS</fullName>
                </value>
                <value>
                    <fullName>Role play</fullName>
                </value>
                <value>
                    <fullName>Session planning</fullName>
                </value>
                <value>
                    <fullName>Teach Us Something</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_RM__c</fullName>
        <inlineHelpText>Most relevant part of assessment - RM</inlineHelpText>
        <label>Most relevant part of assessment - RM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group motivational skills</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Problem solving</fullName>
                </value>
                <value>
                    <fullName>Role play</fullName>
                </value>
                <value>
                    <fullName>Session planning</fullName>
                </value>
                <value>
                    <fullName>Teach Us Something</fullName>
                </value>
                <value>
                    <fullName>Written exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_SM__c</fullName>
        <inlineHelpText>Most relevant part of assessment - SM</inlineHelpText>
        <label>Most relevant part of assessment - SM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Facilitating - Young People Present</fullName>
                </value>
                <value>
                    <fullName>Group motivational skills</fullName>
                </value>
                <value>
                    <fullName>Managing emotions</fullName>
                </value>
                <value>
                    <fullName>Mentoring skills</fullName>
                </value>
                <value>
                    <fullName>Mentor small group - Young People Present</fullName>
                </value>
                <value>
                    <fullName>Resilience</fullName>
                </value>
                <value>
                    <fullName>Respect for others</fullName>
                </value>
                <value>
                    <fullName>Session planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment_SW__c</fullName>
        <inlineHelpText>Most relevant part of assessment - SW</inlineHelpText>
        <label>Most relevant part of assessment - SW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compromising</fullName>
                </value>
                <value>
                    <fullName>Four corners</fullName>
                </value>
                <value>
                    <fullName>Group motivational skills</fullName>
                </value>
                <value>
                    <fullName>Identifying language</fullName>
                </value>
                <value>
                    <fullName>Support worker skills</fullName>
                </value>
                <value>
                    <fullName>Why the Challenge?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_assessment__c</fullName>
        <inlineHelpText>Survey Question: Which part of the candidate assessment was most relevant to the role which you performed? (max 1000 characters)</inlineHelpText>
        <label>Most relevant part of assessment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_the_assessment__c</fullName>
        <inlineHelpText>Most relevant part of assessment - APL</inlineHelpText>
        <label>Most relevant part of assessment - APL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Management Skills</fullName>
                </value>
                <value>
                    <fullName>Decision Making</fullName>
                </value>
                <value>
                    <fullName>Problem Solving Ability</fullName>
                </value>
                <value>
                    <fullName>Managing Emotions</fullName>
                </value>
                <value>
                    <fullName>Resilience</fullName>
                </value>
                <value>
                    <fullName>Respect for others</fullName>
                </value>
                <value>
                    <fullName>Written exercise: Best and worst outcome</fullName>
                </value>
                <value>
                    <fullName>Group Facilitating -Young People Present</fullName>
                </value>
                <value>
                    <fullName>Mentor Small Group -Young People Present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_relevant_part_of_training__c</fullName>
        <inlineHelpText>Survey Question: Which part of the candidate training was most relevant to the role which you performed? (max 1000 characters)</inlineHelpText>
        <label>Most relevant part of training</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_app_training_relevance__c</fullName>
        <inlineHelpText>Survey question: As a new applicant, please rate the relevance of your training for your role (5 = excellent, 1 = poor)

New app training relevance</inlineHelpText>
        <label>New app training relevance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_partner_school_name__c</fullName>
        <inlineHelpText>Survey question: c) Do you work at a school not currently affiliated with NCS? Please name your school.

Non-partner school name</inlineHelpText>
        <label>Non-partner school name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_thing_to_improve_the_programme__c</fullName>
        <inlineHelpText>Survey Question: What one thing would you do to improve the programme? (cuts off after 255 characters)</inlineHelpText>
        <label>One thing to improve the programme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_thing_to_make_curriculum_better__c</fullName>
        <label>One thing to make curriculum better</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_happy_to_promote_NCS__c</fullName>
        <inlineHelpText>Survey question: Would your organisation be happy to help us promote NCS with The Challenge?

Organisation happy to promote NCS</inlineHelpText>
        <label>Organisation happy to promote NCS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, and I am happy to be contacted on behalf of my organisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Chatter_issues__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos; please specify</inlineHelpText>
        <label>Other Chatter issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_comments__c</fullName>
        <inlineHelpText>Survey question: Is there anything not covered by the above questions that you would like to share with us?</inlineHelpText>
        <label>Other comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_manager_before__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos;, please specify</inlineHelpText>
        <label>Other manager (before)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_manager_during__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos;, please specify</inlineHelpText>
        <label>Other manager (during)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_role__c</fullName>
        <inlineHelpText>Survey question: If &apos;other&apos;, please specify

Other role</inlineHelpText>
        <label>Other role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_staff_team__c</fullName>
        <inlineHelpText>Survey question: Did you feel part of the larger staff team throughout the summer? (5 = definitely, 1 = not at all)</inlineHelpText>
        <label>Part of staff team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_school_name__c</fullName>
        <inlineHelpText>Survey question: b) Do you work at one of our partner schools? If yes, please name your school

Partner school name</inlineHelpText>
        <label>Partner school name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Coach_TCS_Mentor_skills__c</fullName>
        <inlineHelpText>Response to question: Why would this person make a good coach or TCS Mentor?</inlineHelpText>
        <label>Personal Coach/TCS Mentor skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pilot_length__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;yes&apos;, do you think the length of the wave was suitable?

Pilot length</inlineHelpText>
        <label>Pilot length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I felt fully able to commit to the (slightly longer) pilot wave</fullName>
                </value>
                <value>
                    <fullName>It was difficult to commit to the pilot wave</fullName>
                </value>
                <value>
                    <fullName>Struggled to commit to pilot wave. Role should have been divided into more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_wave__c</fullName>
        <inlineHelpText>Survey question: a) Did you work a pilot wave?

Pilot wave?</inlineHelpText>
        <label>Pilot wave?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Personal_Coach__c</fullName>
        <label>Potential Personal Coach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_TCS_Mentor__c</fullName>
        <label>Potential TCS Mentor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practitioner_schedule__c</fullName>
        <inlineHelpText>Survey question: Did the week schedule work for you (i.e. working Wednesday-Friday)</inlineHelpText>
        <label>Practitioner schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The 3-day week worked well for me</fullName>
                </value>
                <value>
                    <fullName>I would have liked to work for more days each week</fullName>
                </value>
                <value>
                    <fullName>I would have liked to have worked residentially</fullName>
                </value>
                <value>
                    <fullName>I would have liked to have worked over the weekend to fit in with other work commitments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_length_of_training_session__c</fullName>
        <inlineHelpText>Survey Question: How long do you think the training session for your role should be?

Preferred length of training session</inlineHelpText>
        <label>Preferred length of training session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>3+ days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_residential__c</fullName>
        <inlineHelpText>Survey question: d) If &apos;no&apos;, would you have preferred to be residential?

Multiple choice (only visible if answer to Q:A was &apos;no&apos;</inlineHelpText>
        <label>Preferred residential?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepared_for_role__c</fullName>
        <inlineHelpText>Survey question: Did you feel prepared for the role before stating the programme? (5 = definitely, 1 = not at all)

Prepared for role</inlineHelpText>
        <label>Prepared for role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - not at all</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - definitely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proactive_Self_Starter__c</fullName>
        <label>Proactive, Self-Starter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always flexible when problems arose</fullName>
                </value>
                <value>
                    <fullName>Usually flexible when problems arose</fullName>
                </value>
                <value>
                    <fullName>Sometimes flexible when problems arose</fullName>
                </value>
                <value>
                    <fullName>Not flexible when problems arose</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_partner_suitability__c</fullName>
        <inlineHelpText>Survey question: Did you feel that the professional partners you visited were engaged and well suited to the programme? (5 = defiitely, 1 = not at all)</inlineHelpText>
        <label>Professional partner suitability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme_Manager_Email__c</fullName>
        <label>Programme Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Programme_summary__c</fullName>
        <inlineHelpText>Survey question: Please sum up your experience of your role and the programme in one sentence

Programme summary</inlineHelpText>
        <label>Programme summary</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punctuality_Organisation__c</fullName>
        <label>Punctuality &amp; Organisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always well organised and on time</fullName>
                </value>
                <value>
                    <fullName>Usually well organised and on time</fullName>
                </value>
                <value>
                    <fullName>Sometimes well organised and on time</fullName>
                </value>
                <value>
                    <fullName>Rarely organised or on time</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_APM_Support__c</fullName>
        <label>Rate APM Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_NCS_The_Challenge__c</fullName>
        <label>Rate NCS/The Challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_PL_Support__c</fullName>
        <inlineHelpText>Survey question: How would you rate the support you received from your programme leader? (5 = excellent, 1 = poor)</inlineHelpText>
        <label>Rate PL Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_PM_support__c</fullName>
        <label>Rate PM support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_clear_who_to_ask_for_guidance__c</fullName>
        <inlineHelpText>Survey question: How clear was it who you should speak to for guidance on different topics and information? (5 = very clear, 1 = not at all clear)

Rate: clear who to ask for guidance</inlineHelpText>
        <label>Rate: clear who to ask for guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - not at all clear</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - very clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_quality_of_training__c</fullName>
        <inlineHelpText>Survey question: Please rate the quality of the training you received (5 = excellent, 1 = poor)

Rate quality of training</inlineHelpText>
        <label>Rate quality of training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Clarity_of_automatic_comms__c</fullName>
        <inlineHelpText>Survey question: How would you rate the quality of our automatic emailed communications? (5 = excellent, 1 = poor)

Rating: Clarity of automatic comms</inlineHelpText>
        <label>Rating: Clarity of automatic comms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_accuracy_of_communications__c</fullName>
        <inlineHelpText>Survey Question: How did you rate the communications from The Challenge for accuracy?</inlineHelpText>
        <label>Rating: accuracy of communications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_clarity_of_communications__c</fullName>
        <inlineHelpText>Survey Question: How did you rate the communications from The Challenge for clarity?</inlineHelpText>
        <label>Rating: clarity of communications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_curriculum__c</fullName>
        <inlineHelpText>Survey question: a) Please rate the curriculum used for the skill you taught (5 = excellent, 1 = poor)</inlineHelpText>
        <label>Rating: curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_experience_as_summer_staff__c</fullName>
        <inlineHelpText>Survey question: How would you rate your experience as an NCS summer staff member? (5 = excellent, 1 = poor)

Rating: experience as summer staff</inlineHelpText>
        <label>Rating: experience as summer staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_speed_of_response__c</fullName>
        <inlineHelpText>Survey Question: Please rate the speed and quality of response from the Staffing department. (5 = excellent, 1 = poor)

Rating: speed of response</inlineHelpText>
        <label>Rating: speed of response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>